Update java language to 17